# example-pybind11-vcpkg

./: .gitignore  CMakeLists.txt  Makefile  README.org  cashflow.cpp  client1.py
